Fix dependencies installation in tempest
Fixed issue with the dependencies installation for
tempest plugins. Added become=yes to install packages
as root user.

RHOSINFRA-812

Change-Id: I10eb332a582804ebf93d21fd4470cf961006223f

--- a/plugins/tempest/tasks/setup/git/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/git/install_plugins.yml
@@ -26,6 +26,7 @@
     state: present
   with_dict: "{{ plugins }}"
   when: item.value.dependencies is defined
+  become: yes
 
 - block:
   # some repos have "test-requirements" files and some don't.
