--- a/plugins/tempest/tasks/setup/pip/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/pip/install_plugins.yml
@@ -15,3 +15,4 @@
     state: present
   with_dict: "{{ test_dict.plugins | default({}) }}"
   when: item.value.dependencies is defined
+  become: yes
