Fix dependencies installation in tempest
Fixed issue with the dependencies installation for
tempest plugins. Added become=yes to install packages
as root user.

RHOSINFRA-812

Change-Id: I9f9479ba75e07bfc4e99e615ca50d2732227e93e

--- a/roles/tester/tempest/setup/git/tasks/install_plugins.yml
+++ b/roles/tester/tempest/setup/git/tasks/install_plugins.yml
@@ -18,6 +18,7 @@
   with_dict: "{{ plugins }}"
 
 - name: install extra system requirements for tests
+  become: yes
   yum:
     name: "{{ item.value.dependencies }}"
     state: present
