Fix temepst git setup on OSP>10
Currently tepest git setup fails for a version above 10 due to the
undefined variable.

This patch fixes the tempest clone task and uses default repo and
branch when version is > 10.

Change-Id: I98e45eed71bb017097bd03c87f970acd50c43812

--- a/plugins/tempest/tasks/setup/git/main.yml
+++ b/plugins/tempest/tasks/setup/git/main.yml
@@ -13,8 +13,8 @@
 
 - name: Clone tempest
   git:
-      repo: "{{ setup.repo[test.openstack.version].url|default(setup.repo.defaults.url) }}"
-      version: "{{ setup.repo[test.openstack.version].branch|default(setup.repo.defaults.branch) }}"
+      repo: "{{ setup.repo.get(test.openstack.version, setup.repo.defaults).url }}"
+      version: "{{ setup.repo.get(test.openstack.version, setup.repo.defaults).branch }}"
       dest: "~/{{ test.dir }}"
   register: tempest_repo
   when: setup.local_dir is not defined
