--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ PyYAML>=3.11
 yamlordereddictloader>=0.1.1
 requests!=2.12.2,!=2.13.0,>=2.10.0
 Babel!=2.3.0,!=2.3.1,!=2.3.2,!=2.3.3,>=1.3
+Jinja2>=2.8.0 # avoid exception due to use of 'equalto', like openstack_servers
+pbr>=2.0.0,!=2.1.0
