--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ netaddr >= 0.7.18
 requests!=2.12.2,!=2.13.0,>=2.10.0
 terminaltables>=3.1.0
 Jinja2>=2.8.0 # avoid exception due to use of 'equalto', like openstack_servers
+pbr>=2.0.0,!=2.1.0
