--- a/plugins/tempest/vars/setup/rpm.yml
+++ b/plugins/tempest/vars/setup/rpm.yml
@@ -2,6 +2,10 @@ setup:
     dependencies:
         '7':
             - python-oslotest
+        '8':
+            - python-os-testr
+        '9':
+            - python-os-testr
         '10':
             - python-heat-tests
             - python-ceilometer-tests
