--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -36,6 +36,10 @@
       name: "subunit-filters"
       state: present
 
+- name: Enable extra repo
+  shell: yum-config-manager --enable rhelosp-{{ test.openstack.version|int }}.0-unittest
+  when: test.openstack.version|int > 7 and test.openstack.version|int < 10
+
 - name: Install test dependency
   become: yes
   package:
