Install python-os-testr-0.8.0 from rhelosp-{8,9}.0-unittest repo
* This change is required for RHOS-8 and RHOS-9
* python-os-testr-0.8.0 works with blacklist as well as whitelist tests.

Change-Id: I237bdb9ebc0c8d2e370904aec9b47cd4a6dbebab

--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -36,6 +36,13 @@
       name: "subunit-filters"
       state: present
 
+- name: Enable extra repo
+  yum:
+    name: rhelosp-{{ test.openstack.version|int }}.0-unittest.repo
+    enablerepo: rhelosp-{{ test.openstack.version|int }}.0-unittest
+    state: present
+  when: test.openstack.version|int in [8, 9]
+
 - name: Install test dependency
   become: yes
   package:
