Add timestamps to tempest tests output file
Currently running tempest twice will result in overriting the tempest results.
Adding timestamp to the tempest-results-{{ test_suite }}.xml

Change-Id: Ia11b7b01c69ca0339460b4aad697b8ed2909622c

--- a/plugins/tempest/tasks/run_suite.yml
+++ b/plugins/tempest/tasks/run_suite.yml
@@ -1,6 +1,6 @@
 - name: set facts for test suite
   set_fact:
-      test_output_file: "tempest-results-{{ test_suite }}.xml"
+      test_output_file: "tempest-results-{{ test_suite }}-{{ lookup('pipe', 'date +%Y%m%d%H%M%S') }}.xml"
       blacklistfile: ''
       whitelistfile: ''
       regex: ''
