Use shell for enabling rhelosp-{8,9}.0-unittest brew tag
* Ansible yum module does not enable brew tag so switching
  back to shell

Change-Id: Icdc80db65824c02e67c056f1f44d453ceb85acee

--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -37,10 +37,8 @@
       state: present
 
 - name: Enable extra repo
-  yum:
-    name: rhelosp-{{ test.openstack.version|int }}.0-unittest.repo
-    enablerepo: rhelosp-{{ test.openstack.version|int }}.0-unittest
-    state: present
+  become: yes
+  shell: yum-config-manager --enable rhelosp-{{ test.openstack.version|int }}.0-unittest
   when: test.openstack.version|int in [8, 9]
 
 - name: Install test dependency
