--- a/plugins/tempest/tasks/setup/rpm/main.yml
+++ b/plugins/tempest/tasks/setup/rpm/main.yml
@@ -38,7 +38,7 @@
 
 - name: Enable extra repo
   yum:
-    name: rhelosp-{{ test.openstack.version|int }}.0-unittest.repo
+    name: rhelosp-{{ test.openstack.version|int }}.0-unittest
     enablerepo: rhelosp-{{ test.openstack.version|int }}.0-unittest
     state: present
   when: test.openstack.version|int in [8, 9]
