Add rdo-release support to packstack plugin
Also use redhat.local domain in packstack plugin hosts, this aligns with
the tripleo plugins, and avoids failures when hosts do not have a domain
(nodes booted with virsh for example)

Change-Id: I35fe4a4ac774efc23543a8f4515c65c2ecb8b542

--- a/plugins/packstack/setup_packages.yml
+++ b/plugins/packstack/setup_packages.yml
@@ -8,11 +8,19 @@
       - role: rhos-release
         rhos_release_rpm: https://url.corp.redhat.com/rhos-release-latest-rpm
         release: "{{ install.version }}"
-        build: "{{ install.build }}"
+        build: "{{ install.build | default(omit) }}"
         mirror: "{{ install.mirror | default(omit) }}"
         enable_testing_repos: "{{ install.get('enable', {}).get('testing', {}).repos|default(omit) }}"
         rr_buildmods:
             - pin
+        when: install.version|openstack_distribution == 'OSP'
+
+      - role: rdo-release
+        release: "{{ install.version }}"
+        build: "{{ install.build | default(omit) }}"
+        mirror: "{{ install.mirror | default(omit) }}"
+        when: install.version|openstack_distribution == 'RDO'
+
   tasks:
       - name: Enable current dev working repo
         shell: |
