tox.ini improvements
- Start tests with pep8. This saves a lot of time as style should be
  checked first.
- Python 3.5,3.6,3.7 provides a universal binary 'python3' which allows to
  use it even if version doesn't match. The default py3 version is set to
  py37
- flake8 section was wrapped with testsenv
- added basepython as python3 to testenv:env

Change-Id: Ie7afdc848025a73f58de552d46af90ebbd18ccb6

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
 minversion = 2.3.1
 skipsdist = True
-envlist = py27,pep8,ansible-lint,any-errors-fatal,cli,conflicts,plugin-registry,docs
+envlist = pep8,py27,py37,ansible-lint,any-errors-fatal,cli,conflicts,plugin-registry,docs
 
 # info: to run individual tests/ testcase,
 # you can provide extra '-k' argument to py.test like:
 #  $ tox -e py27 -- -k interactive
 
 [testenv]
-basepython = python2
 usedevelop = True
 # The tests should do more mocking instead of touching the fs espacially the $HOME
 setenv =
@@ -31,6 +30,10 @@ whitelist_externals =
     /usr/bin/bash
     /usr/local/bin/bash
     make
+
+[testenv:venv]
+basepython = python3
+commands = {posargs}
 
 [testenv:conflicts]
 envdir = {toxworkdir}/p27-conflicts
@@ -57,9 +60,9 @@ commands =
     flake8 {posargs} infrared
     # infrared param *must* be specified or flake8 will miss to parse some files
 
-[testenv:py36]
-envdir = {toxworkdir}/p36-shared
-basepython = python3.6
+[testenv:py37]
+envdir = {toxworkdir}/p37-shared
+basepython = python3
 # You need to install selinux from a package now
 sitepackages = True
 
@@ -150,7 +153,7 @@ skip_install = True
 commands =
     bash -c "if [[ $TARGET_BRANCH == master ]]; then  ./tox-check-plugin_registry.py; fi"
 
-[flake8]
+[testenv:flake8]
 envdir = {toxworkdir}/p27-shared
 # E125 is a won't fix until https://github.com/jcrocholl/pep8/issues/126 is resolved.  For further detail see https://review.openstack.org/#/c/36788/
 # E123 skipped because it is ignored by default in the default pep8
@@ -161,6 +164,3 @@ show-source = True
 exclude = .git,.venv,.tox,dist,docs,*egg,plugins/octario,plugins/gabbi
 max-line-length = 120
 # 120 is standard ansible value, feel free to decrease it if you want.
-
-[testenv:venv]
-commands = {posargs}
