--- a/plugins/tripleo-overcloud/tasks/append_script.yml
+++ b/plugins/tripleo-overcloud/tasks/append_script.yml
@@ -19,6 +19,18 @@
   tags: overcloud_ssl
   when: install.overcloud.ssl
 
+- name: Configure undercloud and overcloud to use IPA for DNS
+  block:
+    - name: Set up undercloud to use freeipa as a DNS server
+      import_role:
+          name: tls-everywhere
+          tasks_from: set_undercloud_dns
+    - name: Set up overcloud to use freeipa as a DNS server
+      import_role:
+          name: tls-everywhere
+          tasks_from: set_overcloud_dns
+  when: install.overcloud.use.dns.names
+
 - name: Setup overcloud fencing
   include_tasks: fencing.yml
   when:
