Set up FreeIPA as the DNS server when using domain names
When using domain names, we need a DNS server.  Its probably
easiest to use the IPA server, as we plan to use this to test
TLS Everywhere in any case.

This patch:
- refactors the tls-everywhere role to extract the bits that set
  the DNS server
- update existing calls to the tls-everywhere role to reflect the
  changes
- add calls to this role when using public TLS to set the undercloud
  and overcloud DNS servers.
- renames some variables in validate_overcloud.yml to avoid conflict
  with an externally defined variable
- adds --no-dns-nameservers to the command setting up the ipa server
  as a nameserver on the overcloud, to avoid errors when idm is
  alreasy set as the dns nameserver

Change-Id: Iaf0999287a4985de4eecd8e0eb41ec4454f7c49b

--- a/infrared/common/roles/tls-everywhere/tasks/prepare_freeipa.yml
+++ b/infrared/common/roles/tls-everywhere/tasks/prepare_freeipa.yml
@@ -115,6 +115,8 @@
         ipa dnsrecord-add storage.{{ freeipa_cloud_domain }} overcloud --a-rec 172.17.3.101
         ipa dnszone-add storagemgmt.{{ freeipa_cloud_domain }}
         ipa dnsrecord-add storagemgmt.{{ freeipa_cloud_domain }} overcloud --a-rec 172.17.4.101
+        # TODO: make this a variable
+        ipa dnsconfig-mod --forwarder=10.44.6.1 --forward-policy=only
     register: overcloud_dns_entries
 
   - name: Check for existance of /etc/sysconfig/iptables file
