Allow cloud domain and ipa server domain to be distinct
We refactor the tls-everywhere role to allow the cloud domain
(freeipa_cloud_domain) and the ipa server domain (freeipa_domain)
to be distinct.

Change-Id: Id045fe5dedb993dd9a9985ec65a29214e6a2f90d

--- a/infrared/common/roles/tls-everywhere/defaults/main.yml
+++ b/infrared/common/roles/tls-everywhere/defaults/main.yml
@@ -9,7 +9,8 @@ freeipa_working_dir: /tmp
 freeipa_admin_password: 12345678
 freeipa_hosts_secret: redhat
 freeipa_directory_manager_password: redhat_01
-freeipa_cloud_domain: redhat.local
+freeipa_cloud_domain: "{{ (install|default({})).get('overcloud', {}).get('domain', 'redhat.local') }}"
+freeipa_domain: "{{ (install|default({})).get('freeipa', {}).get('domain', 'redhat.local') }}"
 freeipa_extra_args: "--no-dnssec-validation"
 
 # Epel repo location
