--- a/infrared/common/roles/tls-everywhere/tasks/prepare_undercloud.yml
+++ b/infrared/common/roles/tls-everywhere/tasks/prepare_undercloud.yml
@@ -38,9 +38,15 @@
   - name: Prepare novajoin to work
     become: yes
     shell: >
-        /usr/libexec/novajoin-ipa-setup --principal admin --password {{ freeipa_admin_password }} --server {{ freeipa_node }}.{{ freeipa_cloud_domain }} --realm {{ freeipa_cloud_domain|upper }}
-        --domain {{ freeipa_cloud_domain }} --hostname {{ groups['undercloud'][0] }}.{{ freeipa_cloud_domain }} --precreate
+        /usr/libexec/novajoin-ipa-setup --principal admin --password {{ freeipa_admin_password }} --server {{ freeipa_node }}.{{ freeipa_domain }} --realm {{ freeipa_domain|upper }}
+        --domain {{ freeipa_domain }} --hostname {{ groups['undercloud'][0] }}.{{ freeipa_cloud_domain }} --precreate
     register: novajoin
+
+  - name: Add domain to hieradata in case it does not match the freeIPA domain
+    lineinfile:
+        path: ~/hiera_override.yml
+        line: "nova::metadata::novajoin::api::ipa_domain: {{ freeipa_cloud_domain }}"
+    when: freeipa_cloud_domain != freeipa_domain
 
   - name: Edit undercloud.conf
     blockinfile:
