--- a/infrared/common/roles/shade/tasks/main.yml
+++ b/infrared/common/roles/shade/tasks/main.yml
@@ -4,48 +4,28 @@
       {{ ansible_python_interpreter | default('python') }} -c "import sys; print(True if hasattr(sys, 'real_prefix') else False)"
   register: is_venv
 
-- set_fact:
-    install_pip_from_source: "{{ (false in src_conditions) | ternary(False, True) }}"
+- name: Load "packages" variable file based on the OS type
+  include_vars: "{{ lookup('first_found', params) }}"
   vars:
-    src_conditions:
-      - "{{ install is defined and install.version|default(undercloud_version)|openstack_release >= 15 }}"
-      - "{{ ansible_distribution in ['CentOS', 'RedHat'] }}"
-      - "{{ ansible_distribution_major_version | int >= 8 }}"
+    params:
+      files:
+        - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+      paths:
+        - 'vars'
 
 - name: install virtualenv requirments for pip
   become: yes
   package:
-      name:
-        - gcc
-        - "{{ (install_pip_from_source) | ternary('python3-devel', 'python-devel') }}"
-        - "{{ (install_pip_from_source) | ternary('python3-setuptools', 'python-setuptools') }}"
-        - libffi-devel
-      state: present
+    name: "{{ packages }}"
+    state: latest
 
-- block:
-    - name: Download get-pip.py
-      get_url:
-        url: "https://bootstrap.pypa.io/get-pip.py"
-        dest: "/tmp/get-pip.py"
-        mode: 0755
-        force: yes
-        validate_certs: no
-      register: get_pip
-
-    - name: Install pip using get-pip.py
-      command: "{{ ansible_python_interpreter | default('python') }} {{ get_pip.dest }}"
-      become: true
-  when: install_pip_from_source
-  tags: install-pip
-
-
-#TODO(aopincar): Check if there is a reason not install pip from source only
-- name: install pip using easy_install
+- name: install pip
   become: yes
   easy_install:
       name: pip
-  when: not install_pip_from_source
-  tags: install-pip
+  when:
+    - ansible_distribution in ['CentOS', 'RedHat']
+    - ansible_distribution_major_version == '7'
 
 - name: install virtualenv pip module
   pip:
