--- a/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
+++ b/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
@@ -34,6 +34,15 @@
   retries: 3
   delay: 60
 
+- name: make sure the local site-packages dir exists for pip3
+  vars:
+      short_python_version: "{{ ansible_python_version | regex_replace('^([0-9])\\.([0-9]*).*', '\\1.\\2') }}"
+  file:
+      path: '/usr/local/lib/python{{ short_python_version }}/site-packages/'
+      state: directory
+  become: true
+  when: ansible_python_version is version('3', '>=')
+
 - name: Install extra system requirements for tests
   package:
       name: "{{ plugin_dict.value.dependencies }}"
