DNM: Increase ceph-ansible timeouts to workaround BZ#1707020
Change-Id: I75aa57dd30576cc9955d7d0ff175f3e2f69d3b91

--- a/plugins/tripleo-undercloud/init.yml
+++ b/plugins/tripleo-undercloud/init.yml
@@ -8,7 +8,7 @@
     - name: Set selinux state
       selinux:
           policy: "targeted"
-          state: "{{ install.selinux|default('enforcing') }}"
+          state: "{{ install.selinux|default((((install.version|default(undercloud_version))|openstack_release) >= 15) | ternary('permissive', 'enforcing')) }}"
 
     - name: Ensure yum presence
       # ... helps with old/middle-aged fedora, possibly not needed
