Fix task to set provision state with active state.
If you run the command on active state you get an error. Check also if
the state is active to be idempotency.

Change-Id: Ic0abcfa90c69b4c544ee4612f44d7a1e5d3cb374

--- a/plugins/tripleo-overcloud/tasks/introspection_recovery.yml
+++ b/plugins/tripleo-overcloud/tasks/introspection_recovery.yml
@@ -133,7 +133,7 @@
   shell: |
       source ~/stackrc;
       export PROV_STATE=$(ironic node-show {{ item }} | grep ' provision_state ');
-      if [[ $PROV_STATE != *"available"* ]]; then
+      if [[ $PROV_STATE != *"available"* && $PROV_STATE != *"active"* ]]; then
           ironic node-set-provision-state {{ item }} provide;
       fi
   with_items: "{{ total_nodes.stdout_lines | default([]) }}"
