add dstat infrared role and use it on uc/oc nodes
Change-Id: I6a5daaab16c9e013b41926805d70d4024691abcb

--- a/plugins/tripleo-overcloud/deploy.yml
+++ b/plugins/tripleo-overcloud/deploy.yml
@@ -136,6 +136,15 @@
       - inventory_update
       - deploy
 
+- name: Setup and start dstat
+  hosts: overcloud:!unused
+  gather_facts: no
+  any_errors_fatal: true
+  tags: deploy_preparation
+  tasks:
+    - import_role:
+        name: dstat
+
 - name: Verify overcloud deployment
   hosts: undercloud
   gather_facts: no
