add dstat infrared role and use it on uc/oc nodes
Change-Id: I6a5daaab16c9e013b41926805d70d4024691abcb

--- a/plugins/tripleo-undercloud/setup_packages.yml
+++ b/plugins/tripleo-undercloud/setup_packages.yml
@@ -118,3 +118,7 @@
         package:
             name: "{{ (install.version|openstack_release == 7) | ternary('python-rdomanager-oscplugin', (install.version|openstack_release < 15) | ternary('python-tripleoclient', 'python3-tripleoclient')) }}"
             state: present
+
+      - name: Setup and start dstat
+        import_role:
+          name: dstat
