add support for installing packages on Undercloud (before uc install)
Change-Id: I56f124dd638f279801b8aa303840f83bb2af3679

--- a/plugins/tripleo-undercloud/setup_packages.yml
+++ b/plugins/tripleo-undercloud/setup_packages.yml
@@ -118,3 +118,9 @@
         package:
             name: "{{ (install.version|openstack_release == 7) | ternary('python-rdomanager-oscplugin', (install.version|openstack_release < 15) | ternary('python-tripleoclient', 'python3-tripleoclient')) }}"
             state: present
+
+      - name: install packages on Undercloud
+        package:
+            name: "{{ install.packages }}"
+            state: present
+        when: install.packages is defined
