Fix disable patched_rpms repo task in tempest plugin
Change-Id: I1d6b6e917bd0d5e28c6e21caf8e01d0d587d6983

--- a/plugins/tempest/tasks/image/main.yml
+++ b/plugins/tempest/tasks/image/main.yml
@@ -15,6 +15,7 @@
 
 - name: Disable 'patched-rpms' yum repository in guest image
   command: "virt-customize -a ~/tempest_image --run-command \"yum-config-manager --disable patched-rpms\""
+  failed_when: false
 
 - name: Install packages in guest image tempest will use for testing
   command: "virt-customize -a ~/tempest_image --install {{ test.images.packages }} --selinux-relabel"
