[virsh] Make sure the /var/log/sfiles folder is being removed
When the --serial-files option is enabled the log files folder is not
being removed when cleaning up the environment which causing errors
when trying to reprovision later on.

RHOSINFRA-2576

Change-Id: Ia65b0ada69ec91249e745ac1cf95240b5592d55a

--- a/plugins/virsh/tasks/cleanup.yml
+++ b/plugins/virsh/tasks/cleanup.yml
@@ -123,3 +123,9 @@
   when:
       - item.key not in ignore_virsh_nets
       - item.value.forward_mode|default('') == 'bridge'
+
+- name: Cleanup /var/log/sfiles folder
+  become: true
+  file:
+      path: /var/log/sfiles
+      state: absent
