OOO-UC; Adds auth for custom ceph registry
Added 2 CLI params to  authenticate with a custom ceph registry:
  --registry-ceph-username
  --registry-ceph-password

RHOSINFRA-2566

Change-Id: Icf1f6609ca12165d8b9c5f816ba52700a28bf5de

--- a/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
+++ b/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
@@ -174,5 +174,17 @@
               regexp: '(^\ +)name_prefix.*'
               replace: "\\1name_prefix: {{ install.registry.prefix }}"
       when: install.cdn|default(False)
+
+    - name: Add auth details for ceph registry in containers-prepare-parameter.yaml
+      blockinfile:
+        path: "{{ working_dir }}/containers-prepare-parameter.yaml"
+        block: |2
+            ContainerImageRegistryCredentials:
+              {{ install.registry.ceph.namespace }}:
+                {{ install.registry.ceph.username }}: {{ install.registry.ceph.password }}
+      when:
+        - install.get('registry', {}).get('ceph', {}).get('username', '')
+        - install.get('registry', {}).get('ceph', {}).get('password', '')
+        - install.get('registry', {}).get('ceph', {}).get('namespace', '')
   when:
       - (target_install_version|openstack_distribution) == 'OSP'
