--- a/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
+++ b/plugins/tempest/tasks/setup/rpm/install_plugins_source.yml
@@ -34,6 +34,11 @@
   retries: 3
   delay: 60
 
+- name: apply workaround for whitebox tempest plugin
+  shell: |
+      cd /home/stack/plugins/whitebox_plugin &&  git fetch https://review.rdoproject.org/r/openstack/whitebox-tempest-plugin refs/changes/51/21151/1 && git cherry-pick FETCH_HEAD 
+  become: yes
+
 - name: Install extra system requirements for tests
   package:
       name: "{{ plugin_dict.value.dependencies }}"
