--- a/plugins/virsh/tasks/vms_2_install.yml
+++ b/plugins/virsh/tasks/vms_2_install.yml
@@ -47,6 +47,8 @@
             path: "{{ serial_files_dir }}"
             state: directory
             mode: 0755
+            owner: qemu
+            group: qemu
 
       - name: Redirect serial output to files - Create files
         copy:
@@ -54,9 +56,10 @@
             dest: "{{ serial_files_dir}}/{{ prefix|default('') }}{{ topology_node.name }}-{{ item }}.log"
             force: yes
             mode: 0644
+            owner: qemu
+            group: qemu
         with_sequence: start={{ node_start_index|int }} end={{ topology_node.num|int + node_start_index|int - 1 }}
   when: provision.serial.files
-
 
 # For installation the parallel run should be on the creation of the VMs as the amount is what needs to be paralleled
 - name: create vm's
