Update image customization for RHEL8
* Skip yum-plugin-priorities install (builtin DNF)
* Skip relevant includepkgs repo entry

Change-Id: Iee9b32bf2ac2202b10f35679782fcb840ba93ee2

--- a/plugins/tripleo-undercloud/tasks/images/prepare_tmp_repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/prepare_tmp_repos.yml
@@ -44,4 +44,5 @@
             section: "rhelosp-rhel-{{ ansible_distribution_version }}-server-opt"
             option: includepkgs
             value: yum-plugin-priorities
+        when: ansible_distribution_major_version < '8'
   become: yes
