Update image customization for RHEL8
* Skip yum-plugin-priorities install (builtin DNF)
* Skip relevant includepkgs repo entry

Change-Id: Iee9b32bf2ac2202b10f35679782fcb840ba93ee2

--- a/plugins/tripleo-undercloud/tasks/images/prepare_tmp_repos.yml
+++ b/plugins/tripleo-undercloud/tasks/images/prepare_tmp_repos.yml
@@ -45,3 +45,4 @@
             option: includepkgs
             value: yum-plugin-priorities
   become: yes
+  when: ansible_distribution_major_version < '8'
