--- a/plugins/tempest/vars/tests/storage.yml
+++ b/plugins/tempest/vars/tests/storage.yml
@@ -10,3 +10,4 @@ test_dict:
         - "^tempest.scenario.test_volume_boot_pattern.*"
         - "^tempest.scenario.test_volume_migrate_attached.*"
         - "^tempest.scenario.test_minimum_basic.*"
+        - "^tempest.scenario.test_volume_backup_restore.*"
