Fix typo in module name
Change-Id: I14a393caa24ef1896bd961dac1e67a373f24434f

--- a/plugins/pytest-runner/pytest_run.yml
+++ b/plugins/pytest-runner/pytest_run.yml
@@ -10,7 +10,7 @@
         shell: |
           curl https://bootstrap.pypa.io/get-pip.py | python
         when: ansible_python_version is version('3', '<')
-        became: true
+        become: true
 
       - name: install python3-pip
         package:
