--- a/plugins/tripleo-overcloud/introspect.yml
+++ b/plugins/tripleo-overcloud/introspect.yml
@@ -80,8 +80,8 @@
       # Workaround for bug in osp13, bz 1714205
       - name: "update python-tripleoclient rpm for osp13"
         shell: |
-            yum localinstall -y http://download.eng.bos.redhat.com/brewroot/vol/rhel-7/packages/python-tripleoclient/9.2.7/9.el7ost/noarch/python-tripleoclient-9.2.7-9.el7ost.noarch.rpm
-        when: "install.version|openstack_release == 13"
+            yum localinstall -y https://url.corp.redhat.com/c2a199c
+        when: "install.version|default(undercloud_version)|openstack_release == 13"
         become: yes
 
       - name: register hosts to instack and configure boot
