--- a/plugins/pytest-runner/pytest_run.yml
+++ b/plugins/pytest-runner/pytest_run.yml
@@ -23,7 +23,7 @@
         pip:
           name: pytest
           state: present
-        become: true
+        virtualenv: /tmp/pytest_venv
 
       - name: Install packages
         become: true
@@ -45,7 +45,7 @@
 
       - name: Execute test
         ignore_errors: true
-        shell: pytest -v {{ repo_folder }}{{ item }}
+        shell: source /tmp/pytest_venv/bin/activate && pytest -v {{ repo_folder }}{{ item }}
           --junitxml={{ output_prefix }} 2>&1 --tb=no -r fp || true
         when: test.run|default(False)
         loop: "{{ test.file }}"
