Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,6 +4,7 @@
 	owner = group rhosqeauto-core
 	owner = group user/Avi Talmor (atalmor)
 	owner = group user/Queria Sa-Tas (queria)
+	owner = group user/Vadim Griner (vgri)
 	owner = group user/rhosqeauto (rhosqeauto)
 	read = group Anonymous Users
 	read = group rhosqeauto-contrib
