--- a/infrared/common/roles/tls-everywhere/tasks/prepare_freeipa.yml
+++ b/infrared/common/roles/tls-everywhere/tasks/prepare_freeipa.yml
@@ -117,6 +117,28 @@
         ipa dnsrecord-add storagemgmt.{{ freeipa_cloud_domain }} overcloud --a-rec 172.17.4.101
     register: overcloud_dns_entries
 
+  - name: Check for existance of /etc/sysconfig/iptables file
+    stat:
+       path: /etc/sysconfig/iptables
+    register: iptables_file
+
+  - block:
+    - name: Assue DNS query isn't blocked by iptables
+      become: yes
+      iptables:
+          action: insert
+          comment: "Allow DNS query"
+          table: filter
+          chain: INPUT
+          jump: ACCEPT
+          protocol: "udp"
+          destination_port: 53
+
+    - name: Save iptables rules
+      become: yes
+      shell: service iptables save
+    when: iptables_file.stat.exists
+
   - name: Restart FreeIPA server
     become: yes
     service:
@@ -130,3 +152,5 @@
         line: "{{ freeipa_undercloud_ipaddress }} {{ groups['undercloud'][0] }}.{{ freeipa_cloud_domain }} {{ groups['undercloud'][0] }}"
         state: present
   delegate_to: "{{ freeipa_node }}"
+
+
