DO NOT MERGE OSP16 workaroind
DO NOT MERGE FOR CHERRY PICK ONLY
https://bugzilla.redhat.com/show_bug.cgi?id=1725082

Change-Id: Iea793ee28b5b207ff36ae1ef9d310b240e00d1e7

--- a/plugins/tripleo-undercloud/deploy.yml
+++ b/plugins/tripleo-undercloud/deploy.yml
@@ -30,6 +30,11 @@
           - install.version|openstack_distribution == 'OSP'
           - install.version|openstack_release <= 10
 
+      - name: workaround BZ1725082
+        command: sed -i 's/libselinux-python/python3-libselinux/'   /usr/share/ansible/tripleo-roles/tripleo-bootstrap/vars/redhat-8.yml
+        become: true
+        become_user: root
+
       - name: install the undercloud
         command: bash ~/undercloud_deploy.sh
         register: undercloud_deployment
